force-app/main/default/objects/Contact/fields/ChurnRiskSegment__c.field-meta.xml
<CustomField>
    <fullName>ChurnRiskSegment__c</fullName>
    <label>Churn Risk Segment</label>
    <description>Synced segment membership flag from Data Cloud</description>
    <type>Text</type>
    <length>50</length>
</CustomField>