force-app/main/default/objects/Contact/fields/DCUnifiedIndividualId__c.field-meta.xml
<CustomField>
    <fullName>DCUnifiedIndividualId__c</fullName>
    <label>DC Unified Individual ID</label>
    <description>Cross-reference key to UnifiedIndividual__dlm in Data Cloud</description>
    <type>Text</type>
    <length>255</length>
</CustomField>