force-app/main/default/objects/Contact/fields/DriftAlertSegment__c.field-meta.xml
<CustomField>
    <fullName>DriftAlertSegment__c</fullName>
    <label>Drift Alert Segment</label>
    <description>Synced segment membership flag from Data Cloud</description>
    <type>Text</type>
    <length>50</length>
</CustomField>