force-app/main/default/objects/Contact/fields/LastAdvisorContact__c.field-meta.xml
<CustomField>
    <fullName>LastAdvisorContact__c</fullName>
    <label>Last Advisor Contact</label>
    <description>Updated by Flow when advisor logs a call</description>
    <type>DateTime</type>
</CustomField>