force-app/main/default/objects/Contact/fields/PortfolioDrift__c.field-meta.xml
<CustomField>
    <fullName>PortfolioDrift__c</fullName>
    <label>Portfolio Drift %</label>
    <description>Synced from Data Cloud PortfolioDriftInsight__dlm via Data Share. Do not edit manually.</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>