force-app/main/default/objects/Contact/fields/RiskTolerance__c.field-meta.xml
<CustomField>
    <fullName>RiskTolerance__c</fullName>
    <label>Risk Tolerance</label>
    <description>Client risk appetite classification</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conservative</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <default>true</default>
                <label>Moderate</label>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Speculative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>